--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+​
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Awesome books</title>
 </head>
+​
 <body>
     <h1>Awesome books</h1>
     <div class="container">
-
+​
     </div>
-    <input id="title" type="text" name="Title" placeholder="Title"><br><br>
-    <input id="author" type="text" name="Author" placeholder="Author">
-    <br><br>
-    <input class="add-btn" type="submit" value="Add">
+    <div class="field-add">
+        <h2 class="filed-title">Add a new book</h2>
+        <form id="add-form">
+            <input id="title" type="text" name="Title" placeholder="Title"><br>
+            <input id="author" type="text" name="Author" placeholder="Author">
+            <br>
+            <button class="add-btn" type="submit" value="Add">Add</button>
+        </form>
+    </div>
     <script src="main.js"></script>
 </body>
+​
 </html>
