Add HTML sections and style

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <title>Awesome books</title>
 </head>
 <body>
+    <header>
+        <nav class="nav">
+            <h1 class="logo">All Awesome Books</h1>
+            <ul class="anchors">
+                <li id="book-list"><a>Book List</a></li>
+                <li id="add-new"><a>Add new</a></li>
+                <li id="contact"><a>Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>Awesome books</h1>
     <div class="container">
     </div>
@@ -23,6 +33,20 @@
             <button class="add-btn" type="submit" value="Add">Add</button>
         </form>
     </div>
+    <section class="contact">
+        <div class="desc">
+            <h2>Contact information</h2>
+            <p>Do you have any questions or you just want to reach out to us!</p>
+        </div>
+        <ul>
+            <li>Our e-mail: mail@example.com</li>
+            <li>Our phone number: 007637526567</li>
+            <li>Our address: 2149 Powder House Road</li>
+        </ul>
+    </section>
+    <!-- <footer>
+        <h5>All copyrights are reserved</h5>
+    </footer> -->
     <script src="main.js"></script>
 </body>
 </html>
