Add date improve layout

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </ul>
         </nav>
     </header>
+    <div id="date"></div>
     <h1>Awesome books</h1>
     <div class="container">
     </div>
@@ -44,9 +45,10 @@
             <li>Our address: 2149 Powder House Road</li>
         </ul>
     </section>
-    <!-- <footer>
+    <footer>
         <h5>All copyrights are reserved</h5>
-    </footer> -->
+    </footer>
     <script src="main.js"></script>
+    <script src="https://moment.github.io/luxon/global/luxon.min.js"></script>
 </body>
 </html>
