--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             <input id="title" type="text" name="Title" placeholder="Title"><br>
             <input id="author" type="text" name="Author" placeholder="Author">
             <br>
-            <button class="add-btn" type="submit" value="Add">Add</button>
+            <div class="alert">
+                <button class="add-btn" type="submit" value="Add">Add</button>
+            </div>
         </form>
     </div>
     <section class="contact">
